--- a/leung-eureka-register/pom.xml
+++ b/leung-eureka-register/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>leung-eureka-register</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>leung-eureka-register</name>
-    <description>Leung-Eureka服务注册中心</description>
+    <description>Leung-Eureka服务注册中心 register</description>
 
 <!--    <properties>-->
 <!--        <java.version>1.8</java.version>-->
