leung-auth 认证服务器的搭建

--- a/leung-cloud/pom.xml
+++ b/leung-cloud/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>../leung-common</module>
         <module>../leung-eureka-register</module>
+        <module>../leung-auth</module>
     </modules>
     <packaging>pom</packaging>
     <name>Leung-Cloud</name>
