--- a/leung-cloud/pom.xml
+++ b/leung-cloud/pom.xml
@@ -11,6 +11,9 @@
         <module>../leung-common</module>
         <module>../leung-eureka-register</module>
         <module>../leung-auth</module>
+        <module>../leung-gateway</module>
+        <module>../leung-server</module>
+
     </modules>
     <packaging>pom</packaging>
     <name>Leung-Cloud</name>
