--- a/leung-server/pom.xml
+++ b/leung-server/pom.xml
@@ -10,6 +10,7 @@
     </parent>
     <modules>
         <module>leung-server-system</module>
+        <module>leung-server-test</module>
     </modules>
     <modelVersion>4.0.0</modelVersion>
 
