--- a/leung-server/leung-server-test/src/main/resources/application.yml
+++ b/leung-server/leung-server-test/src/main/resources/application.yml
@@ -20,3 +20,9 @@ security:
     resource:
       id: ${spring.application.name}
       user-info-uri: http://localhost:8301/auth/user
+feign:
+  hystrix:
+    enabled: true
+# Feign请求拦截器能够顺利获取到令牌
+hystrix:
+  shareSecurityContext: true
