--- a/leung-gateway/src/main/resources/application.yml
+++ b/leung-gateway/src/main/resources/application.yml
@@ -4,6 +4,9 @@ server:
 spring:
   application:
     name: leung-gateway
+  # 闭数据库自动装配:
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
 eureka:
   instance:
