--- a/leung-auth/pom.xml
+++ b/leung-auth/pom.xml
@@ -40,6 +40,19 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <!-- 引入MySQL连接驱动和MyBatis Plus多数据源依赖： -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.15</version>
+        </dependency>
     </dependencies>
 
     <build>
