--- a/leung-common/pom.xml
+++ b/leung-common/pom.xml
@@ -11,14 +11,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>leung-common</artifactId>
-    <name>Leung-Common</name>
+    <name>leung-common</name>
     <description>Leung-Common通用模块</description>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
         </dependency>
+
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>fastjson</artifactId>
@@ -63,6 +66,14 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+
+        <!--持久层框架使用时下热门的MyBatis增强插件MyBatis Plus -->
+        <!-- https://mvnrepository.com/artifact/com.baomidou/mybatis-plus-boot-starter -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.1.2</version>
         </dependency>
     </dependencies>
 </project>
