--- a/leung-auth/src/main/resources/leung-auth.properties
+++ b/leung-auth/src/main/resources/leung-auth.properties
@@ -1,7 +1,20 @@
+# 令牌有效期与刷新令牌有效性
 leung.auth.accessTokenValiditySeconds=86400
 leung.auth.refreshTokenValiditySeconds=604800
 
+# 请求令牌的key与secretp及授权类型信息
 leung.auth.clients[0].client=yves
 leung.auth.clients[0].secret=186588
 leung.auth.clients[0].grantType=password,authorization_code,refresh_token
 leung.auth.clients[0].scope=all
+
+# 图形验证码属性信息
+leung.auth.code.time=120
+leung.auth.code.type=png
+leung.auth.code.width=115
+leung.auth.code.height=42
+leung.auth.code.length=4
+leung.auth.code.charType=2
+
+# 免认证路径 要配置多个资源，只需要以逗号分隔即可
+leung.auth.anonUrl=/captcha
