用户管理模块的增删改查

--- a/leung-server/leung-server-system/src/main/resources/application.yml
+++ b/leung-server/leung-server-system/src/main/resources/application.yml
@@ -4,9 +4,31 @@ server:
 spring:
   application:
     name: leung-server-system
-  # 闭数据库自动装配:
-  autoconfigure:
-    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+  datasource:
+    dynamic:
+      # p6spy用于在控制台中打印MyBatis执行的SQL
+      p6spy: true
+      hikari:
+        connection-timeout: 30000
+        max-lifetime: 1800000
+        max-pool-size: 15
+        min-idle: 5
+        connection-test-query: select 1
+        pool-name: FebsHikariCP
+      primary: base
+      datasource:
+        base:
+          username: root
+          password: 186588
+          driver-class-name: com.mysql.cj.jdbc.Driver
+          url: jdbc:mysql://localhost:3306/leung_cloud_base?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2b8
+mybatis-plus:
+  type-aliases-package: yves.leung.com.common.entity.system
+  mapper-locations: classpath:mapper/*/*.xml
+  configuration:
+    jdbc-type-for-null: null
+  global-config:
+    banner: false
 
 eureka:
   instance:
