--- a/leung-server/leung-server-test/src/main/resources/application.yml
+++ b/leung-server/leung-server-test/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: leung-server-test
   # 闭数据库自动装配:
   autoconfigure:
-    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+    exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration,com.baomidou.dynamic.datasource.spring.boot.autoconfigure.DynamicDataSourceAutoConfiguration
 
 eureka:
   instance:
