leung-auth system整合swagger及oauth2认证

--- a/leung-auth/src/main/resources/leung-auth.properties
+++ b/leung-auth/src/main/resources/leung-auth.properties
@@ -8,6 +8,12 @@ leung.auth.clients[0].secret=186588
 leung.auth.clients[0].grantType=password,authorization_code,refresh_token
 leung.auth.clients[0].scope=all
 
+# 在leung-auth模块里配置一个新的Client，专门用于Swagger令牌发放
+leung.auth.clients[1].client=swagger
+leung.auth.clients[1].secret=186588
+leung.auth.clients[1].grantType=password
+leung.auth.clients[1].scope=test
+
 # 图形验证码属性信息
 leung.auth.code.time=120
 leung.auth.code.type=png
