--- a/leung-server/leung-server-system/src/main/resources/leung-server-system.properties
+++ b/leung-server/leung-server-system/src/main/resources/leung-server-system.properties
@@ -9,3 +9,7 @@ leung.server.system.swagger.license=Apache 2.0
 leung.server.system.swagger.licenseUrl=https://www.apache.org/licenses/LICENSE-2.0.html
 
 leung.server.system.anonUrl=/swagger-ui.html,/webjars/**,/swagger-resources/**,/v2/api-docs/**,/,/csrf
+
+leung.server.system.swagger.grantUrl=http://localhost:8301/auth/oauth/token
+leung.server.system.swagger.name=leung_oauth_swagger
+leung.server.system.swagger.scope=test
