--- a/leung-auth/src/main/resources/application.yml
+++ b/leung-auth/src/main/resources/application.yml
@@ -34,6 +34,33 @@ spring:
           password: 186588
           driver-class-name: com.mysql.cj.jdbc.Driver
           url: jdbc:mysql://localhost:3306/leung_cloud_base?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2b8
+  boot:
+    admin:
+      client:
+        # 指定了SBA服务端地址
+        url: http://localhost:8401
+        # 对应SBA服务端的用户名
+        username: yves
+        # 对应SBA服务端的密码
+        password: 186588
+# 配置了SBA客户端的名称，描述和版本信息
+info:
+  app:
+    name: ${spring.application.name}
+    description: "@project.description@"
+    version: "@project.version@"
+management:
+  endpoints:
+    web:
+      exposure:
+        # 表示将SBA客户端的所有监控端点都暴露给SBA服务端
+        include: '*'
+  endpoint:
+    health:
+      # 表示总是展示详细的健康信息
+      show-details: ALWAYS
+
+
 mybatis-plus:
   # 指定别名扫描路径，这个路径后续在febs-common模块里定义，该路径下的实体类将自动配置别名，默认为类名首字母小写。配置别名后，便可以直接在MyBatis XML文件里使用了
   type-aliases-package: yves.leung.common.entity.system
