--- a/leung-gateway/src/main/resources/application.yml
+++ b/leung-gateway/src/main/resources/application.yml
@@ -7,6 +7,31 @@ spring:
   # 闭数据库自动装配:
   autoconfigure:
     exclude: org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+  boot:
+    admin:
+      client:
+        # 指定了SBA服务端地址
+        url: http://localhost:8401
+        # 对应SBA服务端的用户名
+        username: yves
+        # 对应SBA服务端的密码
+        password: 186588
+# 配置了SBA客户端的名称，描述和版本信息
+info:
+  app:
+    name: ${spring.application.name}
+    description: "@project.description@"
+    version: "@project.version@"
+management:
+  endpoints:
+    web:
+      exposure:
+        # 表示将SBA客户端的所有监控端点都暴露给SBA服务端
+        include: '*'
+  endpoint:
+    health:
+      # 表示总是展示详细的健康信息
+      show-details: ALWAYS
 
 eureka:
   instance:
