--- a/leung-server/leung-server-system/src/main/resources/application.yml
+++ b/leung-server/leung-server-system/src/main/resources/application.yml
@@ -22,6 +22,32 @@ spring:
           password: 186588
           driver-class-name: com.mysql.cj.jdbc.Driver
           url: jdbc:mysql://localhost:3306/leung_cloud_base?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2b8
+  boot:
+    admin:
+      client:
+        # 指定了SBA服务端地址
+        url: http://localhost:8401
+        # 对应SBA服务端的用户名
+        username: yves
+        # 对应SBA服务端的密码
+        password: 186588
+# 配置了SBA客户端的名称，描述和版本信息
+info:
+  app:
+    name: ${spring.application.name}
+    description: "@project.description@"
+    version: "@project.version@"
+management:
+  endpoints:
+    web:
+      exposure:
+        # 表示将SBA客户端的所有监控端点都暴露给SBA服务端
+        include: '*'
+  endpoint:
+    health:
+      # 表示总是展示详细的健康信息
+      show-details: ALWAYS
+
 mybatis-plus:
   type-aliases-package: yves.leung.com.common.entity.system
   mapper-locations: classpath:mapper/*/*.xml
