项目重名及令牌存储模式

--- a/leung-gateway-zuul/pom.xml
+++ b/leung-gateway-zuul/pom.xml
@@ -9,10 +9,10 @@
         <relativePath>../leung-cloud/pom.xml</relativePath>
     </parent>
     <groupId>yves.leung.com</groupId>
-    <artifactId>leung-gateway</artifactId>
+    <artifactId>leung-gateway-zuul</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>leung-gateway</name>
-    <description>服务网关</description>
+    <name>leung-gateway-zuul</name>
+    <description>Zuul服务网关</description>
 
     <dependencies>
         <dependency>
