--- a/leung-gateway-zuul/src/main/resources/leung-gateway-zuul.properties
+++ b/leung-gateway-zuul/src/main/resources/leung-gateway-zuul.properties
@@ -1,2 +1,2 @@
-leung.gateway.forbidRequestUri=/**/actuator/**
+leung.gateway.zuul.forbidRequestUri=/**/actuator/**
 # actuator提供的端点直接对外暴露了，这是非常不安全的，因为我们的服务都是通过微服务网关暴露出去的，所以可以在微服务网关里添加一些保护性的代码。基本思路是：这些端点都是以**/actuator/**暴露出去的，所以我们可以限制通过网关访问这些资源。
