--- a/leung-server/leung-server-test/src/main/resources/application.yml
+++ b/leung-server/leung-server-test/src/main/resources/application.yml
@@ -16,6 +16,22 @@ spring:
         username: yves
         # 对应SBA服务端的密码
         password: 186588
+  cloud:
+    # nacos 服务注册发现 与下面的eureka只能二选一
+    nacos:
+      discovery:
+        server-addr: localhost:8001
+#eureka:
+#  instance:
+#    lease-renewal-interval-in-seconds: 20
+#  client:
+#    register-with-eureka: true
+#    fetch-registry: true
+#    instance-info-replication-interval-seconds: 30
+#    registry-fetch-interval-seconds: 3
+#    serviceUrl:
+#      defaultZone: http://yves:186588@localhost:8001/register/eureka/
+
 # 配置了SBA客户端的名称，描述和版本信息
 info:
   app:
@@ -32,16 +48,7 @@ management:
     health:
       # 表示总是展示详细的健康信息
       show-details: ALWAYS
-eureka:
-  instance:
-    lease-renewal-interval-in-seconds: 20
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    instance-info-replication-interval-seconds: 30
-    registry-fetch-interval-seconds: 3
-    serviceUrl:
-      defaultZone: http://yves:186588@localhost:8001/register/eureka/
+
 security:
   oauth2:
     resource:
